--- a/src/scss/user-account-page/_user-account.scss
+++ b/src/scss/user-account-page/_user-account.scss
@@ -86,3 +86,54 @@
         font-weight: 500;
     }
 }
+
+.user-edit {
+
+    // column-count: 1;
+    // display: block;
+    margin-bottom: 100px;
+
+    &__list {
+        // column-count: 2;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        column-gap: 50px;
+        row-gap: 20px;
+        margin-bottom: 50px;
+    }
+
+    &__item {
+        width: 400px;
+        height: 50px;
+        position: relative;
+
+        // &:not(:last-child) {
+        //     margin-bottom: 20px;
+        // }
+    }
+
+    &__label {
+        // margin-right: 20px;
+        font-size: 12px;
+        background-color: $white;
+        position: absolute;
+        top: -7px;
+        left: 20px;
+    }
+
+    &__input {
+        padding: 13px 20px 12px;
+        border: 1px solid $gray;
+        // margin-right: 20px;
+        border-radius: 5px;
+        width: 100%;
+        height: 100%;
+        // position: relative;
+    }
+
+    &__btn {
+        padding: 13px 50px 12px;
+    }
+
+
+}
