--- a/src/scss/user-account-page/_user-account.scss
+++ b/src/scss/user-account-page/_user-account.scss
@@ -6,6 +6,13 @@
         display: flex;
     }
 
+    &__info {
+
+        &--wrapper {
+            flex-direction: column;
+        }
+    }
+
     &__aside {
         display: flex;
         flex-direction: column;
