--- a/src/scss/creations-details-page/_details-card.scss
+++ b/src/scss/creations-details-page/_details-card.scss
@@ -143,6 +143,10 @@
         display: flex;
     }
 
+    &__message {
+        justify-content: space-between;
+    }
+
     &__message,
     &__wrapper {
         margin-bottom: 25px;
