--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -3,6 +3,11 @@
     padding: 45px 0 60px;
     position: relative;
     z-index: 5;
+    transition: filter 0.2s;
+
+    &.active {
+        filter: blur(10px);
+    }
 
     @include r($mobile-md) {
         padding: 40px 0;
