--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -205,8 +205,10 @@
         align-items: center;
         position: relative;
 
-        &:not(:last-child) {
-            margin-right: 40px;
+        &--users {
+            &:not(:last-child) {
+                margin-right: 40px;
+            }
         }
     }
 
