--- a/src/scss/index-page/_index.scss
+++ b/src/scss/index-page/_index.scss
@@ -1,6 +1,11 @@
 .gallery {
     background-color: $gray-300;
     padding: 85px 0 95px;
+    transition: filter 0.2s;
+
+    &.active {
+        filter: blur(10px);
+    }
 
     @include r($mobile-md) {
         padding: 60px 0 85px;
@@ -17,6 +22,11 @@
 
 .news-block {
     padding-bottom: 50px;
+    transition: filter 0.2s;
+
+    &.active {
+        filter: blur(10px);
+    }
 
     @include r($screen-xl) {
         padding-bottom: 70px;
@@ -270,6 +280,11 @@
 
 .authors-list {
     padding-bottom: 100px;
+    transition: filter 0.2s;
+
+    &.active {
+        filter: blur(10px);
+    }
 
     @include r($screen-xl) {
         padding-bottom: 70px;
