--- a/src/scss/news-page/_news.scss
+++ b/src/scss/news-page/_news.scss
@@ -1,8 +1,13 @@
 .news {
     margin-bottom: 100px;
 
-    &__title {
+    &__wrapper {
+        display: flex;
+        justify-content: space-between;
         margin-bottom: 30px;
+    }
+
+    &__title {
 
         @include r($mobile-sm) {
             margin-bottom: 20px;
@@ -25,6 +30,14 @@
         }
 
         .news-card {
+            padding: 10px 10px 0;
+            border-radius: 20px;
+            cursor: pointer;
+            transition: box-shadow 0.3s;
+
+            &:hover {
+                box-shadow: 3px 7px 10px 5px rgba(0, 0, 0, 0.1);
+            }
 
             &__img-wrapper {
 
@@ -34,10 +47,10 @@
             }
 
             &__link {
-
+                
                 &:hover {
                     color: $red;
-
+            
                     .news-card__img-wrapper {
                         box-shadow: 3px 3px 8px 1px rgba(0, 0, 0, 0.5);
                     }
@@ -77,9 +90,9 @@
             width: 100%;
         }
 
-        &:not(:last-child) {
-            margin-bottom: 20px;
-        }
+        // &:not(:last-child) {
+        //     margin-bottom: 20px;
+        // }
 
         &:nth-child(1) {
             width: 969px;
@@ -114,23 +127,36 @@
             }
         }
 
+        // &:nth-child(9),
+        // &:nth-child(10),
+        // &:nth-child(11) {
+        //     .news-card__img-wrapper {
+        //         max-height: 425px;
+        //         height: 100%;
+        //     }
+
+        //     @include r($mobile-sm) {
+        //         max-width: 545px;
+        //         width: 100%;
+        //     }
+        // }
+
         .news-card {
             max-width: 100%;
             width: 100%;
-            height: auto;
+            height: 100%;
 
             &__link {
                 flex-direction: column;
-                height: 100%;
                 max-width: 100%;
                 width: 100%;
-                padding: 5px 5px 0;
             }
 
             &__box {
                 display: flex;
                 margin-top: auto;
                 padding: 20px;
+                height: auto;
 
                 @include r($mobile-lg) {
                     padding: 10px 15px 15px;
@@ -158,7 +184,7 @@
             }
 
             &__date {
-                margin-bottom: 15px;
+                // margin-bottom: 15px;
                 margin-top: auto;
             }
 
@@ -190,9 +216,10 @@
             &__img-wrapper {
                 max-width: 100%;
                 width: 100%;
-                height: auto;
+                height: 425px;
                 margin-right: 0;
                 padding: 0;
+                background-color: rgba(0, 0, 0, 0.1);
 
                 img {
                     max-width: 100%;
@@ -206,16 +233,40 @@
             }
         }
     }
-
 }
 
 .single-news {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     margin-bottom: 80px;
 
-    &__title {
-        margin-bottom: 30px;
+    &__wrapper {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 50px;
+    }
+
+    &__btns-wrapper {
+        display: flex;
+
+
+    }
+
+    &__delete-btn {
+        background-color: $black;
+        color: $white;
+        margin-right: 50px;
+        padding: 15px 80px 15px;
+        transition: background-color 0.3s;
+
+        &:hover {
+            background-color: $red;
+        }
+    }
+
+    &__edit-btn {
+        padding: 20px 80px 15px;
+        display: block;
     }
 
     .news-card {
@@ -232,7 +283,6 @@
             img {
                 position: absolute;
                 width: 100% !important;
-                // height: 550px !important;
                 z-index: 2;
                 height: 100%;
 
@@ -245,13 +295,22 @@
             }
         }
 
+        &__box {
+            padding: 20px;
+            box-shadow: 10px 15px 20px 5px rgba(0, 0, 0, 0.1);
+            border-radius: 15px;
+        }
+
         &__title {
             font-size: 22px;
             font-weight: 700;
             margin-bottom: 40px;
+            word-break: break-all;
         }
 
         p {
+            word-break: break-all;
+
             &:not(:last-child) {
                 margin-bottom: 20px;
             }
@@ -404,7 +463,7 @@
                 }
 
                 &__img-wrapper {
-                    height: auto;
+                    height: 220px;
                     border-radius: 10px;
                     max-width: 380px;
                     width: 100%;
@@ -466,6 +525,7 @@
                     font-size: 18px;
                     font-weight: 600;
                     margin-bottom: 20px;
+                    word-break: break-all;
                     transition: color 0.4s;
                     @include line-clamp(3);
 
@@ -476,11 +536,163 @@
 
                 &__text {
                     p {
+                        word-break: break-all;
                         @include line-clamp(6);
                     }
                 }
             }
 
+        }
+    }
+}
+
+.create-news {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 100px;
+
+    &__title {
+        margin-bottom: 50px;
+    }
+
+    &__form {
+        display: flex;
+    }
+
+    &__block {
+        margin-right: 100px;
+        width: 700px;
+    }
+
+    &__img-wrapper {
+        position: relative;
+        max-width: 700px;
+        width: 100%;
+        height: 450px;
+        margin-bottom: 50px;
+        border-radius: 20px;
+        background-color: rgba(0, 0, 0, 0.1);
+    }
+
+    &__img {
+        width: 100%;
+        height: 100%;
+        border-radius: 20px;
+        object-fit: cover;
+        position: relative;
+        z-index: 2;
+
+        &--blur {
+            position: absolute;
+            left: 15px;
+            top: 15px;
+            filter: blur(10px);
+            z-index: 0;
+        }
+    }
+
+    &__label {
+        
+        &--img {
+            position: relative;
+            // background-color: $red;
+            cursor: pointer;
+            background-color: $black;
+            color: $white;
+            padding: 12px 110px 13px;
+            transition: background-color 0.3s;
+            margin-right: 50px;
+
+            &:hover {
+                background-color: $red;
+            }
+        }
+
+        &--text,
+        &--title {
+            position: absolute;
+            top: -10px;
+            left: 20px;
+            padding: 0 3px;
+            border-radius: 5px;
+            font-size: 16px;
+            background-color: $white;
+        }
+    }
+
+    &__input {
+
+        &--img {
+            position: absolute;
+            left: 0;
+            z-index: 0;
+            opacity: 0;
+            visibility: hidden;
+        }
+    }
+
+    &__btn {
+        padding: 12px 120px 13px;
+
+        &--cancel {
+            background-color: $black;
+            color: $white;
+            margin-right: 40px;
+            transition: background-color 0.3s;
+
+            &:hover {
+                background-color: $red;
+            }
+        }
+    }
+
+    &__box {
+        width: 700px;
+    }
+
+    &__input-wrapper {
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        width: 100%;
+        margin-bottom: 50px;
+
+        input,
+        textarea {
+            border-radius: 10px;
+            padding: 20px 35px 20px 20px;
+            border: 2px solid $black;
+        }
+
+        textarea {
+            height: 344px;
+            resize: none;
+            overflow: auto;
+        }
+
+        input {
+            padding: 15px 40px 15px 20px;
+        }
+    }
+
+    &__btns-wrapper {
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    &__clean-btn {
+        position: absolute;
+        right: 20px;
+        top: 50%;
+        transform: translateY(-50%);
+
+        &--text {
+            top: 32px;
+            right: 20px;
+        }
+
+        svg {
+            fill: rgba(0, 0, 0, 0.6);
         }
     }
 }
