--- a/src/scss/user-account-page/_user-account.scss
+++ b/src/scss/user-account-page/_user-account.scss
@@ -26,14 +26,20 @@
         margin-bottom: 70px;
     }
 
+    &__box-wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        margin-right: 70px;
+    }
+
     &__img-wrapper {
         position: relative;
         width: 290px;
         height: 400px;
-        margin-right: 70px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        border-radius: 20px;
+        background-color: rgba(0, 0, 0, 0.1);
     }
 
     &__img {
@@ -52,7 +58,9 @@
     }
 
     &__btn-edit {
+        margin-top: 50px;
         padding: 13px 80px 12px;
+        width: 100%;
         background-color: $black;
         color: $white;
         position: relative;
@@ -65,7 +73,7 @@
         svg {
             position: absolute;
             fill: $white;
-            right: 17%;
+            right: 10%;
             top: 50%;
             transform: translateY(-50%);
         }
@@ -104,6 +112,7 @@
 
     span {
         font-weight: 500;
+        word-break: break-all;
     }
 }
 
@@ -115,6 +124,7 @@
 
     &__content {
         display: flex;
+        position: relative;
         // margin-bottom: 50px;
     }
 
@@ -126,6 +136,8 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        background-color: rgba(0, 0, 0, 0.1);
+        border-radius: 22px;
     }
 
     &__img {
@@ -169,14 +181,28 @@
         width: 400px;
         height: 50px;
         position: relative;
+    }
 
-        // &:not(:last-child) {
-        //     margin-bottom: 20px;
-        // }
+    &__star {
+        position: absolute;
+        right: 0px;
+        top: -20px;
+        font-size: 30px;
+        color: $red;
+        display: flex;
+
+        &--warning {
+            bottom: 50px;
+            top: auto;
+
+            span {
+                font-size: 18px;
+                padding-left: 10px;
+            }
+        }
     }
 
     &__label {
-        // margin-right: 20px;
         font-size: 12px;
         background-color: $white;
         position: absolute;
