--- a/src/scss/authors-works-page/_authors-works.scss
+++ b/src/scss/authors-works-page/_authors-works.scss
@@ -232,7 +232,7 @@
     }
 
     &__item {
-        width: 300px;
+        width: 100%;
 
         &:not(:last-child) {
             margin-bottom: 20px;
