--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -487,7 +487,7 @@
                 box-shadow: 0px 5px 7px 0px rgb(0 0 0 / 50%);
                 border-radius: 10px;
                 top: 35px;
-                padding: 20px;
+                padding: 10px;
                 width: 100%;
                 transition: visibility 0.3s ease-in-out, opacity 0.3s ease-in-out, top 0.3s ease-in-out;
 
@@ -501,7 +501,7 @@
                     margin-bottom: 20px;
                     text-align: center;
                     background-color: $gray-300;
-                    padding: 5px;
+                    padding: 5px 0;
                     border-radius: 10px;
                 }
 
@@ -516,6 +516,7 @@
 
             &__list {
                 margin-bottom: 30px;
+                padding: 0 10px;
             }
 
             &__item {
