--- a/src/scss/components/_news-card.scss
+++ b/src/scss/components/_news-card.scss
@@ -105,9 +105,11 @@
     }
 
     &__author {
-
+        transition: color 0.3s;
+        
         span {
             color: $red;
+            transition: color 0.3s;
         }
     }
 
