--- a/src/scss/authors-page/_authors.scss
+++ b/src/scss/authors-page/_authors.scss
@@ -171,13 +171,13 @@
             }
 
             &__box {
-                align-items: flex-start;
                 padding-top: 20px;
+                text-align: center;
             }
 
             &__link {
                 height: auto;
-                display: block;
+                display: inline-block;
                 padding: 0;
                 margin-bottom: 5px;
                 box-shadow: none;
@@ -383,6 +383,10 @@
         img {
             border-radius: 10px;
             object-fit: cover;
+        }
+
+        &:not(:last-child) {
+            background-color: $white;
         }
     }
 }
