--- a/src/scss/components/_author-card.scss
+++ b/src/scss/components/_author-card.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     border-radius: 10px;
-    height: 100px;
+    height: 100%;
     transition: box-shadow 0.4s;
     position: relative;
     background-color: $white;
@@ -76,13 +76,13 @@
     }
 
     &__box {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        // height: 100%;
+        height: 100%;
     }
 
     &__link {
+        display: flex;
+        align-items: center;
+        justify-content: center;
         display: block;
         height: 100%;
         border-bottom-left-radius: 10px;
@@ -133,7 +133,7 @@
     &__wrapper {
         display: flex;
         align-items: center;
-        justify-content: space-between;
+        // justify-content: center;
         margin-bottom: 15px;
     }
 
