--- a/src/scss/creations-details-page/creations-details.scss
+++ b/src/scss/creations-details-page/creations-details.scss
@@ -225,11 +225,12 @@
         }
 
         &__box {
+            display: flex;
+            flex-direction: column;
             align-items: flex-start;
+            justify-content: space-between;
 
             @include r($mobile-sm) {
-                display: flex;
-                flex-direction: column;
                 align-items: center;
             }
         }
