--- a/src/scss/authors-works-page/_authors-works.scss
+++ b/src/scss/authors-works-page/_authors-works.scss
@@ -5,6 +5,8 @@
     &__img-wrapper {
         position: relative;
         margin-right: 100px;
+        max-width: 279px;
+        width: 100%;
     }
 
     &__img {
@@ -249,16 +251,32 @@
 .user-message {
     display: flex;
     align-items: center;
+    position: relative;
     background-color: $gray-300;
     padding: 20px 30px;
     border-radius: 20px;
+    height: 100%;
 
     &__wrapper {
         display: flex;
-        flex-direction: row-reverse !important;
+        flex-direction: column;
         justify-content: space-between;
+        // flex-direction: row-reverse !important;
+        // justify-content: space-between;
+        // justify-content: flex-end;
         max-width: 100%;
         width: 100%;
+        max-height: 100%;
+        height: 100%;
+    }
+
+    &__wrapper-box {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-direction: row-reverse;
+        height: 100%;
+        margin-bottom: auto;
     }
 
     &__link {
@@ -308,17 +326,20 @@
         display: block;
         font-weight: 700;
         font-size: 22px;
-        margin-bottom: 20px;
+        // margin-bottom: 20px;
         color: $red;
     }
 
     time {
         // position: relative;
+        // position: absolute;
         // top: -25px;
+        // right: 20px;
         line-height: 10px;
         color: $red;
         display: flex;
         justify-content: center;
+        align-items: center;
 
         .user-message__slash {
             color: $gray-100;
@@ -328,14 +349,57 @@
             color: $black;
             padding-left: 5px;
             font-size: 18px;
+            font-weight: 500;
         }
     }
 
     &__text {
         padding-top: 20px;
+        margin-bottom: 20px;
         p {
             word-break: break-all;
-            @include line-clamp(3)
+            @include line-clamp(2);
+
+            &.active {
+                @include line-clamp(1000000)
+            }
+        }
+    }
+
+    &__btn {
+        padding: 2px 25px 2px 0px;
+        max-width: 175px;
+        width: 100%;
+        position: relative;
+        transition: background-color 0.3s;
+
+        &.active {
+            background-color: rgba(0, 0, 0, 0.5);
+            pointer-events: none;
+        
+            svg {
+                transform: rotate(0);
+            }
+        }
+
+        svg {
+            fill: $white;
+            position: absolute;
+            right: 10px;
+            transform: rotate(180deg);
+            transition: transform 0.3s;
+        }
+    }
+
+    &__delete {
+        float: right;
+        padding: 2px 20px;
+        background-color: $black;
+        color: $white;
+        transition: background-color 0.3s;
+
+        &:hover {
+            background-color: $red;
         }
     }
 }
@@ -358,7 +422,7 @@
         height: 20px;
         width: 20px;
         position: relative;
-        left: 95%;
+        left: 96%;
         top: 35px;
 
         button,
@@ -386,7 +450,7 @@
         color: $white;
         border: none;
         border-radius: 50%;
-        padding: 5px 10px;
+        padding: 5px 12px;
         transition: background-color 0.3s ease-in-out;
 
         &:focus,
