--- a/src/scss/components/_painting-card.scss
+++ b/src/scss/components/_painting-card.scss
@@ -49,6 +49,7 @@
     &__img-link {
         display: block;
         max-width: 100%;
+        background-color: rgba(0, 0, 0, 0.3);
         height: 293px;
         border-radius: 10px;
         margin-bottom: 10px;
