--- a/src/scss/authors-page/_authors.scss
+++ b/src/scss/authors-page/_authors.scss
@@ -241,7 +241,7 @@
 
                 &--reviews {
                     margin-right: 20px;
-                    
+
                     &::before {
                         background-image: url(../../assets/images/content/chat-icon.svg);
                     }
@@ -281,7 +281,7 @@
     @include r($mobile-sm) {
         margin: 0 0 10px;
     }
-    
+
     &__label {
         position: absolute;
         top: 50%;
@@ -332,7 +332,7 @@
                 display: block;
             }
         }
-        
+
         &:not(:last-child) {
             margin-right: 10px;
 
@@ -388,5 +388,152 @@
         &:not(:last-child) {
             background-color: $white;
         }
+    }
+}
+
+.author-chat {
+    max-width: 1675px;
+    width: 100%;
+    padding: 15px;
+    background-color: rgba(0, 0, 0, 0.05);
+    border-radius: 20px;
+    margin: 60px 0;
+    
+    &__date {
+        font-family: $journalism;
+        text-align: center;
+        font-weight: 700;
+        font-size: 35px;
+        margin-bottom: 30px;
+    }
+
+    .user-chat__list {
+        // margin-left: auto;
+        // max-width: 800px;
+        overflow: auto;
+    }
+
+    &__list {
+        // max-width: 600px;
+        width: 100%;
+        margin-bottom: 50px;
+    }
+
+    .user-chat__inner,
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        max-width: 100%;
+    }
+
+    .user-chat__item,
+    &__item {
+        margin-bottom: 20px;
+        max-width: 100%;
+        width: 100%;
+        // max-width: 800px;
+    }
+
+    .user-chat__message,
+    &__message {
+        display: flex;
+        width: 100%;
+        background-color: rgba(0, 0, 0, 0.05);
+        padding: 15px;
+        border-radius: 20px;
+        max-width: 600px;
+    }
+
+    .user-chat__img-wrapper,
+    &__img-wrapper {
+        border-radius: 50%;
+        margin-right: 30px;
+        background-color: $white;
+        max-width: 100px;
+        width: 100%;
+        height: 100px;
+
+        img {
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+        }
+    }
+
+    .user-chat__box,
+    &__box {
+        word-break: break-all;
+    }
+
+    .user-chat__name,
+    &__name {
+        display: block;
+        margin-bottom: 10px;
+        font-weight: 600;
+        font-size: 20px;
+        @include line-clamp(2)
+    }
+
+    .user-chat__text,
+    &__text {
+        line-height: 1.6rem;
+    }
+
+    &__time,
+    .user-chat__time {
+        max-width: 500px;
+        width: 100%;
+        display: flex;
+        justify-content: flex-start;
+
+        &--right {
+            justify-content: flex-end;
+        }
+
+        span {
+            font-family: $journalism;
+            font-weight: 600;
+            font-size: 35px;
+            color: $red;
+        }
+    }
+
+    &__form {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        // padding-top: 50px;
+        position: relative;
+
+        .keyboard,
+        &--btn {
+            position: absolute;
+            top: 15px;
+            right: 15px;
+        }
+    }
+
+    // &__label {
+    //     max-width: 100%;
+    //     width: 100%;
+    //     height: 100%;
+    //     margin: 0 40px 30px;
+    // }
+
+    &__textarea {
+        width: 100%;
+        margin-bottom: 30px;
+        height: 200px;
+        border-radius: 10px;
+        padding: 15px 35px 15px 15px;
+        resize: none;
+    }
+
+    &__btn {
+        padding: 12px 50px;
+        border-radius: 10px;
     }
 }
