--- a/src/scss/authors-works-page/_authors-works.scss
+++ b/src/scss/authors-works-page/_authors-works.scss
@@ -157,6 +157,14 @@
             border-color: $red;
             color: $red;
         }
+
+        span {
+            display: inline-block;
+            margin-right: 10px;
+            padding: 8px 0;
+            font-weight: 600;
+            color: $red;
+        }
     }
 
     &__span {
