--- a/src/scss/authors-works-page/_authors-works.scss
+++ b/src/scss/authors-works-page/_authors-works.scss
@@ -36,6 +36,7 @@
     &__content {
         margin-bottom: 100px;
         padding-top: 60px;
+        position: relative;
 
         div:last-child {
             flex-direction: column;
@@ -95,6 +96,18 @@
         }
     }
 
+    &__btns-wrapper {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+
+    // &__btn {
+    //     right: 0;
+    //     // position: absolute;
+    //     // max-width: 265px;
+    // }
+
     &__title {
         text-align: center;
         position: relative;
@@ -114,13 +127,14 @@
         max-width: 700px;
         width: 100%;
         padding-top: 70px;
-        column-count: 2;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
 
         span {
             display: block;
 
             &:not(:last-child) {
-                margin-bottom: 40px;
+                margin-bottom: 30px;
             }
         }
 
@@ -159,9 +173,8 @@
         }
 
         span {
-            display: inline-block;
+            display: inline;
             margin-right: 10px;
-            padding: 8px 0;
             font-weight: 600;
             color: $red;
         }
